# local-swe-agent

./: README.md  pyproject.toml
bench/: run.py  selftest_hard.py  selftest_term.py  tasks.py  tasks_hard.py  tasks_term.py
bench/results/: claude-qwen36-bench-2026-07-19T213745+0000.json  hard-claude-qwen36-bench-2026-07-19T221642+0000.json  hard-opencode-qwen36-bench-2026-07-19T221155+0000.json  hard-swea-qwen3-coder_30b-2026-07-19T220242+0000.json  hard-swea-qwen36-bench-2026-07-19T220006+0000.json  hard-swea-z-ai_glm-4.7-flash-2026-07-19T215026+0000.json  opencode-qwen36-bench-2026-07-19T212807+0000.json  qwen3-coder_30b-2026-07-19T210336+0000.json  qwen36-bench-2026-07-19T205819+0000.json  term-claude-qwen36-bench-2026-07-19T225851+0000.json  term-opencode-qwen36-bench-2026-07-19T225537+0000.json  term-swea-qwen3-coder_30b-2026-07-19T230559+0000.json  term-swea-qwen36-bench-2026-07-19T222344+0000.json  term-swea-z-ai_glm-4.7-flash-2026-07-19T222346+0000.json  z-ai_glm-4.7-flash-2026-07-19T210338+0000.json
src/swea/: __init__.py  agent.py  cli.py  config.py  prompt.py  tools.py
tests/: mock_server.py  test_e2e.py  test_tools.py
