[project]
name = "local-swe-agent"
version = "0.1.0"
description = "Coding-agent harness that drives a local OpenAI-compatible model through real software-engineering work"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openai-agents>=0.18,<0.19"]

[project.scripts]
swea = "swea.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swea"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
